test/deprecated/constructorError/hasConstructor.good
hasConstructor.chpl:5: error: Type 'Foo' defined a constructor here
